---------------------------------------------------------------------------------------------------
Version: 4.0.4
Date: 2020.09.xx
  Features:
    - Added TechGen:sethidden()
  Bugfixes:
    - Fixed omnitractors mk4+ requiring the wrong plates with angels industries
    - More compression unlock fixes
---------------------------------------------------------------------------------------------------
Version: 4.0.3
Date: 2020.09.01
  Bugfixes:
    - Fixed a possible crash with omni.lib.replace_recipe_result() due to missing brackets
---------------------------------------------------------------------------------------------------
Version: 4.0.2
Date: 2020.08.31
  Features:
    - omni.lib.add_recipe_ingredient()/result() can replace .expensive ings/res seperately
  Bugfixes:
    - Fixed omni.lib.add_unlock_recipe() not disabling the recipe
    - Fixed setLocDesc() forcing localisation types
---------------------------------------------------------------------------------------------------
Version: 4.0.1
Date: 2020.08.22
  Features:
    - Add omni.lib.iunion as a faster alternative to lib.union for merging two contiguous arrays
  Bugfixes:
    - Fixed cases where gcd function hung on NaN
    - Fixed cases where recgen wouldn't handle tech icons correctly
    - Added omni.lib.multiply_recipe_ingredient()
---------------------------------------------------------------------------------------------------
Version: 4.0.0
Date: 2020.08.14
  Changes:
    - Updated for Factorio version 1.0
    - Added "spider-vehicle", "spider-leg" and "spidertron-remote" types
---------------------------------------------------------------------------------------------------
Version: 3.18.18
Date: 2020.08.13
  Features:
    - Added omni.lib.enable_recipe()
  Bugfixes:
    - Fixed a case where icon overlays weren't added correctly
    - Fixed omni.lib.replace_science_pack() not properly working with untagged tables