@@ -6,6 +6,7 @@ Date: 2020.09.xx
   Bugfixes:
     - Fixed omnitractors mk4+ requiring the wrong plates with angels industries
     - More compression unlock fixes
+    - Fixed missing recipe flags on recipe standardization
 ---------------------------------------------------------------------------------------------------
 Version: 4.0.3
 Date: 2020.09.01
